Fix overflow modal results

--- a/resources/scss/front/front.scss
+++ b/resources/scss/front/front.scss
@@ -68,7 +68,11 @@
     padding-top: 25px;
     background: #ffffff;
     width: 100%;
+    height: 100%;
+    max-height: 90%;
+    margin: 5% 0;
     max-width: 700px;
+    overflow-y: auto;
     @include box-shadow(4px 4px 20px 4px rgba(0,0,0,0.1));
     @include border-radius(10px);
   }
